--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <h1>I'm larry</h1>
     <script src="js/app.js"></script>
 </body>
 </html>
